--- a/src/lib/ColorSwatch/ColorSwatch.scss
+++ b/src/lib/ColorSwatch/ColorSwatch.scss
@@ -1,21 +1,33 @@
 .color-swatch {
-    margin: 0;
-    width: 72px;
-    height: 72px;
-    overflow: hidden;
     appearance: none;
-    border-radius: var(--control-corner-radius);
-
-    &:checked {
-        border-radius: calc(var(--control-corner-radius) + 2px);
-        box-shadow: inset 0 0 0 2px var(--accent-color-default),
-                    inset 0 0 0 3px var(--background-base);
-    }
-
-    &:focus-visible {
-        box-shadow: inset 0 0 0 2px var(--accent-color-default),
-                    inset 0 0 0 3px var(--background-base),
-                    0 0 0 1px var(--background-base),
-                    0 0 0 3px var(--focus-stroke-outer) !important;
+    margin: 0;
+    &.type- {
+        &standard {
+            width: 72px;
+            height: 72px;
+            overflow: hidden;
+            border-radius: var(--control-corner-radius);
+            &:checked {
+                border-radius: calc(var(--control-corner-radius) + 2px);
+                box-shadow: inset 0 0 0 2px var(--accent-color-default),
+                            inset 0 0 0 3px var(--background-base);
+            }
+        
+            &:focus-visible {
+                box-shadow: inset 0 0 0 2px var(--accent-color-default),
+                            inset 0 0 0 3px var(--background-base),
+                            0 0 0 1px var(--background-base),
+                            0 0 0 3px var(--focus-stroke-outer) !important;
+            }
+        }
+        &round {
+            width: 36px;
+            height: 36px;
+            border-radius: 36px;
+            &:checked {
+                box-shadow: 0 0 0 1px var(--background-base),
+                            0 0 0 3px var(--focus-stroke-outer);
+            }
+        }
     }
 }
