--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -289,6 +289,14 @@
     }
 }
 
+// Generic scale animation
+@keyframes feature-item-scale {
+    from {
+        opacity: 0;
+        transform: scale(0.75);
+    }
+}
+
 // Cloud icon entrance animation
 @keyframes cloud-provider {
     from {
@@ -310,19 +318,11 @@
     }
 }
 
-// File status indicator entrance animation
-@keyframes cloud-status-icon {
-    from {
-        transform: scale(0.75);
-        opacity: 0;
-    }
-}
-
 // Preview pane entrance animation
 @keyframes preview-pane-open {
     from {
-        transform: translateX(80%);
         opacity: 0;
+        transform: translateX(80%);
     }
 }
 
@@ -463,7 +463,7 @@
             }
             :global(svg) {
                 @include icon($size: 20px);
-                animation: 250ms ease cloud-status-icon backwards calc(600ms + (100ms * var(--file-index)));
+                animation: 250ms ease feature-item-scale backwards calc(600ms + (100ms * var(--file-index)));
             }
         }
     }
@@ -573,8 +573,8 @@
         .metadata {
             user-select: text;
             word-break: break-word;
-            color: var(--text-color-primary);
             line-height: normal;
+            color: var(--text-color-secondary);
             font: {
                 size: var(--control-font-size);
                 weight: normal;
@@ -582,25 +582,29 @@
         }
 
         // Metadata elements
-        h4,
-        h5 {
+        h4, h5, h6 {
+            color: var(--text-color-primary);
+        }
+
+        h4, h5 {
             margin: 0;
             text-align: center;
         }
 
         // Used to display file name
         h4 {
+            font-family: var(--font-family-sans-serif);
             margin-bottom: 5px;
             font: {
                 size: 20px;
-                weight: 700;
+                weight: 600;
             }
         }
 
         // Used to display file extension
         h5 {
             font: {
-                size: 18px;
+                size: 14px;
                 weight: normal;
             }
         }
@@ -610,9 +614,10 @@
             user-select: none;
             margin: 0;
             margin-top: 8px;
+            margin-bottom: 2px;
             font: {
                 size: var(--control-font-size);
-                weight: 300;
+                weight: normal;
             }
         }
     }
@@ -662,8 +667,22 @@
 .tags-showcase {
     .showcase-panel {
         animation: feature-preview 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 400ms;
-        width: 328px;
+    }
+    > .showcase-panel {
+        @include flex($justify: center);
+        width: 400px;
         height: 260px;
+    }
+    .tags-picker {
+        @include flex($gap: 16px);
+        animation-delay: 600ms;
+        z-index: 1;
+        position: absolute;
+        bottom: -24px;
+        padding: 12px;
+    }
+    :global(.color-swatch) {
+        animation: 250ms ease feature-item-scale backwards calc(800ms + (100ms * var(--color-index)));
     }
 }
 
